# model_architecture

./: .env.example  .gitignore  AGENTS.md  ANYHOW.md  justfile  pyproject.toml
.agents/skills/application-cqrs-use-cases/: SKILL.md
.agents/skills/domain-business-encapsulation/: SKILL.md
.agents/skills/domain-rules-and-errors/: SKILL.md
.agents/skills/onion-cqrs-project-map/: SKILL.md
.agents/skills/persistence-write-results/: SKILL.md
.claude/go_migration_skills/: README.md  generation_review_notes.md  manifest.json
.claude/node_migration_skills/: ANTI_HALLUCINATION_CHECKLIST.md  LANGUAGE_NEUTRAL_SPEC_REQUIREMENTS.md  MANIFEST.md  NODE_IDIOM_DECISIONS.md  REVIEW_NOTES.md
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
audits/: application-domain-merge-audit.config.yaml  final-consensus-audit.md  reviewer-01.md  reviewer-02.md  reviewer-03.md  reviewer-04.md  reviewer-05.md
docs/: openapi.json
docs/api/: workspace.yml
docs/uow-research/: consensus.md  finding-1-concrete-domain-uow-facade.md  finding-2-official-transaction-apis.md  finding-3-clean-architecture-and-uow-examples.md  finding-4-wrapper-crates-and-ergonomics.md  subagent-validation.md
server/: .env.example  Cargo.toml
server/crates/application/: Cargo.toml
servers/go/: go.mod  go.sum  gqlgen.yml
servers/node/: package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
src/api/: _time.py  openapi.py  router.py
src/infrastructure/: json_io.py
src/persistence/: cache_port.py
src/server/: __init__.py  app.py  config.py  deps.py
(+325 files in other folders)
