[project]
name = "python"
version = "1.0.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "jsonschema",
    "pydantic",
    "python-dotenv",
    "requests",
    "semver",
    "typing_extensions",
    "uvicorn",
]

[dependency-groups]
dev = [
    "basedpyright",
    "ruff",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]

[tool.basedpyright]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportDeprecated = "warning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/domain",
    "src/application",
    "src/api",
    "src/persistence",
    "src/infrastructure",
    "src/server",
]
